2008-02-27  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tkMacOSXDraw.c: workaround leak in Carbon SetPortPenPixPat()
	API [Bug 1863346]; avoid repeated PixPat allocation/deallocation.

2008-02-23  Joe English  <jenglish@users.sourceforge.net>

	* library/ttk/combobox.tcl, doc/ttk_combobox.n,
	tests/ttk/combobox.test: Arrange to deliver <<ComboboxSelected>>
	event after listbox is unposted, as intended [Bug 1890211].
	Clarified documentation.

2008-02-23  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkPanedWindow.c: Don't enforce minimum sash 
	thickness of 5 pixels, just use 5 as a default  [FR 1898288]

2008-02-14  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* unix/README: Documented missing configure flags.

2008-02-06  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/ttk_scale.n (new file): Added basic documentation. [Bug 1881925]

2008-02-04  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.1 TAGGED FOR RELEASE ***

	* generic/tk.h:		Bump to 8.5.1 for release.
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:

	* unix/configure:	autoconf-2.59
	* win/configure:

2008-02-04  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/MeasureChar.3, doc/FontId.3: Minor improvements (formatting,
	keywords).

2008-02-02  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish-Info.plist.in:	add CFBundleLocalizations key, listing
	* unix/configure.in (Darwin): 	all library/msgs locales.

	* unix/configure.in (Darwin):	correct Info.plist year substitution in
					non-framework builds.

	* unix/configure:		autoconf-2.59

2008-02-01  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for 8.5.1 release.

2008-02-01  Reinhard Max  <max@suse.de>

	* generic/tkImgGIF.c: Fixed a buffer overflow (CVE-2008-0553).
	* tests/imgPhoto.test: Added a test for the above.

2008-01-31  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/msgbox.tcl (::tk::MessageBox): don't use ttk::label in