@@ -10,7 +10,7 @@ exec wish "$0" "$@"
 # separate ".tcl" files is this directory, which are sourced by this script as
 # needed.
 #
-# RCS: @(#) $Id: widget,v 1.49 2007/12/13 15:27:07 dgp Exp $
+# RCS: @(#) $Id: widget,v 1.50 2008/02/29 22:48:07 patthoyts Exp $
 
 package require Tcl	8.5
 package require Tk	8.5
@@ -358,6 +358,7 @@ addFormattedText {
     @@demo ruler	A ruler with adjustable tab stops
     @@demo floor	A building floor plan
     @@demo cscroll	A simple scrollable canvas
+    @@demo knightstour  A Knight's tour of the chess board
 
     @@subtitle	Scales and Progress Bars
     @@demo hscale	Horizontal scale
